[metadata]
name = non-pds
version = 0.0.0
description = With a non-`pds` namespace


[options]
zip_safe = True
include_package_data = True
namespace_packages = pds2
packages = find_namespace:
package_dir =
    =src
install_requires =
    pds.api_client==0.6.0


[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    pds-experiment = pds2.experiment.main:main
