[metadata]
name = with
version = 0.0.0
description = With a `pds` namespace


[options]
zip_safe = True
include_package_data = True
namespace_packages = pds
packages = find_namespace:
package_dir =
    =src
install_requires =
    pds.api_client==0.6.0


[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    pds-experiment = pds.experiment.main:main
