[metadata]
name = without
version = 0.0.0
description = Without a `pds` namespace, with a `pds` package


[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    =src
install_requires =
    pds.api_client==0.6.0


[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    pds-experiment = pds.experiment.main:main
